second commit, design fixed

--- a/index.html
+++ b/index.html
@@ -1,63 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/main.css">
-  <title>Richard</title>
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/main.css">
+    <title>Richard</title>
+  </head>
 <body>
-  <!-- navbar -->
+  <!-- hero section -->
 
-  <nav class="navbar">
     <div class="container nav__wrapper">
-     <div class="navbar__header">
-      <img src="images/logo.svg" alt="logo">
-      <ul class="nav__list">
-        <li class="nav__list-item"><a href="#">About</a></li>
-        <li class="nav__list-item"><a href="#">Features</a></li>
-        <li class="nav__list-item"><a href="#">How to Use</a></li>
-        <li class="nav__list-item"><a href="#">Download</a></li>
-      </ul>
-     </div>
-    </div>
-  </nav>
-
-  <!-- end of navbar -->
-
-
-  <!-- navbar -->
-
-  <!-- <div class="container navbar__wrapper">
-    <nav class="navbar">
-      <a href="#">
+      <div class="navbar">
         <img src="images/logo.svg" alt="logo">
-      </a>
-      <ul class="navbar__list">
-        <li class="navbar__list-item"><a href="#">About</a></li>
-        <li class="navbar__list-item"><a href="#">Features</a></li>
-        <li class="navbar__list-item"><a href="#">How to use</a></li>
-        <li class="navbar__list-item"><a href="#">Download</a></li>
-      </ul>
-    </nav>
-  </div> -->
-
-  <!-- end of navbar -->
-
-  <!-- hero section  -->
-
-  <!-- <section class="hero">
-    <div class="container">
-      <div class="text__content">
-        <h1>Momentum</h1>
-        <p>Launch your product — and savor the momentum.</p>
-        <a href="#" class="btn">Get the App</a>
+        <ul class="nav__list">
+          <li class="nav__list-item"><a href="#">About</a></li>
+          <li class="nav__list-item"><a href="#">Features</a></li>
+          <li class="nav__list-item"><a href="#">How to Use</a></li>
+          <li class="nav__list-item"><a href="#">Download</a></li>
+        </ul>
       </div>
-      <img class="hero__img" src="images/hero__bg.png" alt="hero__img">
+      <div class="section__hero">
+        <h2>Momentum</h2>
+        <p>Launch your product — and savor the momentum.</p>
+        <a href="#" class="btn btn--app">Get the App</a>
+      </div>
+      <span class="arrow__down"></span>
     </div>
-  </section> -->
 
-  <!-- end of hero section  -->
+  <!-- end of hero section -->
+
+  <!-- descriotion section -->
+
+    <div class="container description__section">
+      <h5>Aenean Consectetur Porta</h5>
+      <h2>Nullam quis risus eget urna mollis ornare vel eu leo.</h2>
+      <img src="images/description__section.png" alt="">
+    </div>
+
+  <!-- end of description section  -->
 </body>
 </html>
