--- a/index.html
+++ b/index.html
@@ -1,43 +1,202 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/main.css">
-    <title>Richard</title>
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/main.css">
+  <title>Richard</title>
+</head>
 <body>
   <!-- hero section -->
 
-    <div class="container nav__wrapper">
-      <div class="navbar">
-        <img src="images/logo.svg" alt="logo">
-        <ul class="nav__list">
-          <li class="nav__list-item"><a href="#">About</a></li>
-          <li class="nav__list-item"><a href="#">Features</a></li>
-          <li class="nav__list-item"><a href="#">How to Use</a></li>
-          <li class="nav__list-item"><a href="#">Download</a></li>
-        </ul>
-      </div>
-      <div class="section__hero">
-        <h2>Momentum</h2>
-        <p>Launch your product — and savor the momentum.</p>
-        <a href="#" class="btn btn--app">Get the App</a>
-      </div>
-      <span class="arrow__down"></span>
+  <div class="container nav__wrapper">
+    <div class="navbar">
+      <img src="images/logo.svg" alt="logo">
+      <ul class="nav__list">
+        <li class="nav__list-item"><a href="#">About</a></li>
+        <li class="nav__list-item"><a href="#">Features</a></li>
+        <li class="nav__list-item"><a href="#">How to Use</a></li>
+        <li class="nav__list-item"><a href="#">Download</a></li>
+      </ul>
     </div>
+    <div class="section__hero">
+      <h2>Momentum</h2>
+      <p>Launch your product — and savor the momentum.</p>
+      <a href="#" class="btn btn--app">Get the App</a>
+    </div>
+    <span class="arrow__down"></span>
+  </div>
 
   <!-- end of hero section -->
 
   <!-- descriotion section -->
 
-    <div class="container description__section">
-      <h5>Aenean Consectetur Porta</h5>
-      <h2>Nullam quis risus eget urna mollis ornare vel eu leo.</h2>
-      <img src="images/description__section.png" alt="">
-    </div>
+  <div class="container description__section">
+    <h5>Aenean Consectetur Porta</h5>
+    <h2>Nullam quis risus eget urna mollis ornare vel eu leo.</h2>
+    <img src="images/description__section.png" alt="">
+  </div>
 
   <!-- end of description section  -->
-</body>
-</html>
+
+  <!-- details section  -->
+
+  <div class="container">
+    <div class="details__1">
+      <div class="content__text--f">
+        <h5>Aenean Consectetur</h5>
+        <h2>S</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
+      </div>
+      <div class="content__img--1">
+        <img src="images/detail__1.png" alt="detail__1">
+      </div>
+    </div>
+    <div class="details__2">
+      <div class="content__img--s">
+        <img src="images/detail__2.png" alt="agsfdg">
+      </div>
+      <div class="content__text--s">
+        <h5>ConsectUltricies</h5>
+        <h2>Amet Ipsum</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
+      </div>
+    </div>
+    <div class="details__1 details__3">
+      <div class="content__text--f text--t">
+        <h5>Aenean Consectetur Porta</h5>
+        <h2>Magna Porta Sit Bibendum</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
+      </div>
+      <div class="content__img--1 img--3">
+        <img src="images/detail__3.png" alt="detail__1">
+      </div>
+    </div>
+  </div>
+
+  <!-- end of details section  -->
+
+  <!-- opportunities section  -->
+
+  <div class="container opportunities">
+    <div class="notfications opp__sec">
+      <img src="images/activity__icon.png" alt="icon">
+      <h3>Activity Notifications</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
+    </div>
+    <div class="timing opp__sec">
+      <img src="images/timing__icon.png" alt="icon">
+      <h3>Custom Timing</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
+    </div>
+    <div class="optimized opp__sec">
+      <img src="images/optimized__icon.png" alt="icon">
+      <h3>Mobile Optimized</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
+    </div>
+  </div>
+
+  <div class="container numbers__row">
+    <div class="num__row row__f">
+      <p>+12k</p>
+      <h4>Nibh Elit Tristique</h4>
+    </div>
+    <div class="num__row row__s">
+      <p>84</p>
+      <h4>Aenean Condimentum</h4>
+    </div>
+    <div class="num__row row__t">
+      <p>3,07</p>
+      <h4>Quam Inceptos</h4>
+    </div>
+    <div class="num__row row__f">
+      <p>24h</p>
+      <h4>Ullamcorper</h4>
+    </div>
+  </div>
+
+  <!-- end of opportunities section  -->
+
+
+  <!-- aboutFood section  -->
+
+  <div class="container aboutFood">
+    <div class="food__text">
+      <h5>Aenean Consectetur Porta</h5>
+      <h2>Sem Risus Elit Vestibulum</h2>
+      <p>Nulla vitae elit libero, a pharetra augue. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod.</p>
+      <span class="bg__food"></span>
+    </div>
+    <div class="row__reverse--2">
+      <div class="food__text food__text--2">
+        <h5>Aenean Consectetur Porta</h5>
+        <h2>Sem Risus Elit Vestibulum</h2>
+        <p>Nulla vitae elit libero, a pharetra augue. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod.</p>
+        <div class="bg__foods--2">
+          <span class="bg__food--2"></span>
+        </div>
+      </div>
+    </div>
+  </div>
+
+    <!-- end of aboutFood section  -->
+
+    <!-- promoters section  -->
+
+  <div class="container">
+    <div class="promotions">
+      <img src="images/(tutiq)__icon.png" alt="icon">
+      <p>HeadNulla vitae elit libero, a pharetra augue. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Pus sit amet fermentum. Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod.ing</p>
+    </div>
+    <div class="muallif">
+      <p class="home__p">Joshua Home</p>
+      <span class="highphen"></span>
+      <p>New York Times</p>
+    </div>
+    <div class="supporters">
+      <img src="images/supporters.png" alt="supporters">
+    </div>
+  </div>
+
+    <!-- end of promoters section  -->
+
+    <!-- <div class="container"> -->
+      <!-- <div class="img_phones">
+        <img src="images/phones.jpg" alt="phones__pic">
+      </div> -->
+    <!-- </div> -->
+
+    <section class="end__section">
+      <div class="container section__color">
+        <h2>Ready to get started?</h2>
+        <a  class="down__now btn__next" href="#download">Download Now</a>
+        <a href="#" class="get__in btn__next">Get in Touch</a>
+
+      </div>
+    </section>
+      <div class="container form__section">
+        <h2>Get updates from Richard</h2>
+      <p>New course alerts, discounts and free lessons</p>
+      <form class=" form__black" action="/action_page.php">
+        <label for="email" ></label>
+        <input class="enter" type="email" id="email" name="email"value="Enter your email">
+        <input type="submit" value="Submit" class="submit">
+      </form>
+      </div>
+    </main>
+    <footer class="footer__site container">
+      <img src="images/logo__footer.svg" alt="">
+      <div class="footer__item">
+        <a class="footer__link" href="#">Email</a>
+        <a class="footer__link" href="#">Instagram</a>
+        <a class="footer__link" href="#">Facebook</a>
+        <a class="footer__link" href="#">Twitter</a>
+        <a class="footer__link" href="#">Image License Info</a>
+        <a class="footer__link" href="#">Powered by Webflow</a>
+      </div>
+    </footer>
+
+
+  </body>
+  </html>
